# SLM

./: .gitignore  README.md  SLM_Guidebook.md  config.yaml  main.py  prompt.md  pyproject.toml  requirements.txt  test_loaders.py  test_titanic.py
BERT_FT/: tut1.ipynb
LLM_with_HF/: transforems_tut.ipynb
RFT/: day01.ipynb
backup/: main.py
backup/src/: build_jsonl_sft.py  inference.py  schema_utils.py  train.py  utils.py
data/: test_sft.jsonl  train_sft.jsonl
data/spider_sft/: validation.jsonl
qa_tests/: run_qa.py
qa_tests/data/: malformed.csv
src/: build_jsonl_sft.py  config_utils.py  evaluation_pipeline.py  inference.py  preprocess.py  requirements.txt  schema_utils.py  spider_data_preprocess.py  test.ipynb  train.py  train_qwen3.ipynb
src/preprocessing/: README.md  __init__.py  base.py
src/preprocessing/formatters/: __init__.py  base.py
src/preprocessing/loaders/: __init__.py  csv_loaders.py  hf_loaders.py
src/preprocessing/processors/: __init__.py  base.py
